[package]
name = "databases-site"
version = "0.1.0"
authors = ["INfoUpgraders <infoupgraders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["tera_templates"] }
serde = { version = "1.0", features = ["derive"] }